--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Ene</h1>
-    <p>Hi, welcome to my page ;)</p>
+    <p>Hi there, welcome to my page ;)</p>
 </body>
 </html>
