--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Merry Match | JavaScript</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Ene</h1>
-    <p>Hi there, welcome to my page ;)</p>
+  <div class="container">
+    <h2>🎄 Merry Match 🎄</h2>
+    <div class="game"></div>
+    <button class="reset" onclick="window.location.reload();">Reset Game</button>
+  </div>
+  <script>
+    const emojis = ["🤶🏾", "🤶🏾", "🎄", "🎄", "🎁", "🎁", "☃️", "☃️", "🧦", "🧦", "❄️", "❄️"];
+    const shuffledEmojis = emojis.sort(() => Math.random() > 0.5 ? 1 : -1);
+    const gameContainer = document.querySelector('.game');
+
+    // Add cards to the game container
+    shuffledEmojis.forEach(emoji => {
+      const box = document.createElement('div');
+      box.className = 'item';
+      box.dataset.emoji = emoji; // Store the emoji as a data attribute
+      box.addEventListener('click', handleCardClick);
+      gameContainer.appendChild(box);
+    });
+
+    let firstCard = null;
+    let secondCard = null;
+    let lockBoard = false;
+
+    function handleCardClick() {
+      if (lockBoard) return; // If board is locked, don't allow clicks
+      if (this === firstCard) return; // Prevent clicking the same card twice
+      if (this.classList.contains('boxMatch')) return; // Ignore already matched cards
+
+      this.classList.add('boxOpen');
+      this.innerHTML = this.dataset.emoji;
+
+      if (!firstCard) {
+        firstCard = this; // First card selected
+        return;
+      }
+
+      secondCard = this; // Second card selected
+      lockBoard = true; // Lock the board
+      checkForMatch();
+    }
+
+    function checkForMatch() {
+      const isMatch = firstCard.dataset.emoji === secondCard.dataset.emoji;
+
+      if (isMatch) {
+        handleMatch();
+      } else {
+        handleNoMatch();
+      }
+    }
+
+    function handleMatch() {
+      firstCard.classList.add('boxMatch');
+      secondCard.classList.add('boxMatch');
+
+      resetBoard(); // Reset after a match
+    }
+
+    function handleNoMatch() {
+      setTimeout(() => {
+        firstCard.classList.remove('boxOpen');
+        secondCard.classList.remove('boxOpen');
+        firstCard.innerHTML = '';
+        secondCard.innerHTML = '';
+        resetBoard();
+      }, 1000); // Wait for 1 second before flipping back
+    }
+
+    function resetBoard() {
+      firstCard = null;
+      secondCard = null;
+      lockBoard = false;
+
+      // Check win condition
+      if (document.querySelectorAll('.boxMatch').length === emojis.length) {
+        setTimeout(() => {
+          alert('🎉 Congrats, you won Merry Match! Merry <Christmas! 🎄');
+        }, 500);
+      }
+    }
+  </script>
 </body>
 </html>
